--- a/API/GameEngine/GameEngine.vcxproj
+++ b/API/GameEngine/GameEngine.vcxproj
@@ -186,6 +186,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="GameEngineRendererTileMap.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="GameEngineSound.h">
       <SubType>
       </SubType>
@@ -221,6 +225,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="GameEngineRenderer.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="GameEngineRendererTileMap.cpp">
       <SubType>
       </SubType>
     </ClCompile>
