--- a/API/GameEngineContents/GameEngineContents.vcxproj.filters
+++ b/API/GameEngineContents/GameEngineContents.vcxproj.filters
@@ -68,35 +68,14 @@
     <ClCompile Include="InventoryExit.cpp">
       <Filter>Actor\03. Play\Global\Inventory</Filter>
     </ClCompile>
-    <ClCompile Include="Items.cpp">
-      <Filter>Actor\03. Play\Global\Obejct</Filter>
-    </ClCompile>
     <ClCompile Include="MyFarmLevel.cpp">
       <Filter>Level</Filter>
     </ClCompile>
     <ClCompile Include="TownLevel.cpp">
       <Filter>Level</Filter>
     </ClCompile>
-    <ClCompile Include="WildHorseradish.cpp">
-      <Filter>Actor\03. Play\Global\Obejct</Filter>
-    </ClCompile>
-    <ClCompile Include="Hoe.cpp">
-      <Filter>Actor\03. Play\Global\Obejct</Filter>
-    </ClCompile>
-    <ClCompile Include="Weeds.cpp">
-      <Filter>Actor\03. Play\Global\Obejct</Filter>
-    </ClCompile>
-    <ClCompile Include="TreeBottom.cpp">
-      <Filter>Actor\03. Play\Global\Obejct</Filter>
-    </ClCompile>
     <ClCompile Include="BackGround.cpp">
       <Filter>Actor\01. GlobalObject</Filter>
-    </ClCompile>
-    <ClCompile Include="TreeTop.cpp">
-      <Filter>Actor\03. Play\Global\Obejct</Filter>
-    </ClCompile>
-    <ClCompile Include="SmallStone.cpp">
-      <Filter>Actor\03. Play\Global\Obejct</Filter>
     </ClCompile>
     <ClCompile Include="FixedPlayerColl.cpp">
       <Filter>Actor\01. GlobalObject</Filter>
@@ -104,17 +83,62 @@
     <ClCompile Include="InventoryCurrentFrame.cpp">
       <Filter>Actor\03. Play\Global\Inventory</Filter>
     </ClCompile>
-    <ClCompile Include="SmallWood1.cpp">
-      <Filter>Actor\03. Play\Global\Obejct</Filter>
-    </ClCompile>
-    <ClCompile Include="SmallWood2.cpp">
-      <Filter>Actor\03. Play\Global\Obejct</Filter>
-    </ClCompile>
     <ClCompile Include="PlayerHouse.cpp">
       <Filter>Actor\03. Play\Global\Obejct\buildings</Filter>
     </ClCompile>
+    <ClCompile Include="Hoe.cpp">
+      <Filter>Actor\03. Play\Global\Obejct\Tool</Filter>
+    </ClCompile>
     <ClCompile Include="Block.cpp">
-      <Filter>Actor\03. Play\Global\Obejct</Filter>
+      <Filter>Actor\03. Play\Global\Obejct\Global</Filter>
+    </ClCompile>
+    <ClCompile Include="Items.cpp">
+      <Filter>Actor\03. Play\Global\Obejct\Global</Filter>
+    </ClCompile>
+    <ClCompile Include="SmallStone.cpp">
+      <Filter>Actor\03. Play\Global\Obejct\Item</Filter>
+    </ClCompile>
+    <ClCompile Include="SmallWood1.cpp">
+      <Filter>Actor\03. Play\Global\Obejct\Item</Filter>
+    </ClCompile>
+    <ClCompile Include="SmallWood2.cpp">
+      <Filter>Actor\03. Play\Global\Obejct\Item</Filter>
+    </ClCompile>
+    <ClCompile Include="TreeBottom.cpp">
+      <Filter>Actor\03. Play\Global\Obejct\Item</Filter>
+    </ClCompile>
+    <ClCompile Include="TreeTop.cpp">
+      <Filter>Actor\03. Play\Global\Obejct\Item</Filter>
+    </ClCompile>
+    <ClCompile Include="Weeds.cpp">
+      <Filter>Actor\03. Play\Global\Obejct\Item</Filter>
+    </ClCompile>
+    <ClCompile Include="WildHorseradish.cpp">
+      <Filter>Actor\03. Play\Global\Obejct\Item</Filter>
+    </ClCompile>
+    <ClCompile Include="Tv.cpp">
+      <Filter>Actor\03. Play\Global\Obejct\Furniture</Filter>
+    </ClCompile>
+    <ClCompile Include="BadTop.cpp">
+      <Filter>Actor\03. Play\Global\Obejct\Furniture</Filter>
+    </ClCompile>
+    <ClCompile Include="BadBottom.cpp">
+      <Filter>Actor\03. Play\Global\Obejct\Furniture</Filter>
+    </ClCompile>
+    <ClCompile Include="Table.cpp">
+      <Filter>Actor\03. Play\Global\Obejct\Furniture</Filter>
+    </ClCompile>
+    <ClCompile Include="Chair.cpp">
+      <Filter>Actor\03. Play\Global\Obejct\Furniture</Filter>
+    </ClCompile>
+    <ClCompile Include="MyHouseLevel.cpp">
+      <Filter>Level</Filter>
+    </ClCompile>
+    <ClCompile Include="Hitter.cpp">
+      <Filter>Actor\03. Play\Global\Obejct\Furniture</Filter>
+    </ClCompile>
+    <ClCompile Include="MoveFarm.cpp">
+      <Filter>Actor\03. Play\Global\Obejct\Global</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -194,20 +218,11 @@
     <ClInclude Include="InventoryExit.h">
       <Filter>Actor\03. Play\Global\Inventory</Filter>
     </ClInclude>
-    <ClInclude Include="Items.h">
-      <Filter>Actor\03. Play\Global\Obejct</Filter>
-    </ClInclude>
     <ClInclude Include="MyFarmLevel.h">
       <Filter>Level</Filter>
     </ClInclude>
     <ClInclude Include="TownLevel.h">
       <Filter>Level</Filter>
-    </ClInclude>
-    <ClInclude Include="WildHorseradish.h">
-      <Filter>Actor\03. Play\Global\Obejct</Filter>
-    </ClInclude>
-    <ClInclude Include="Hoe.h">
-      <Filter>Actor\03. Play\Global\Obejct</Filter>
     </ClInclude>
     <ClInclude Include="ToolEnum.h">
       <Filter>Actor\00. GlobalData</Filter>
@@ -215,23 +230,11 @@
     <ClInclude Include="PlayerData.h">
       <Filter>Actor\03. Play\Global\Player</Filter>
     </ClInclude>
-    <ClInclude Include="Weeds.h">
-      <Filter>Actor\03. Play\Global\Obejct</Filter>
-    </ClInclude>
     <ClInclude Include="GameData.h">
       <Filter>Actor\00. GlobalData</Filter>
     </ClInclude>
-    <ClInclude Include="TreeBottom.h">
-      <Filter>Actor\03. Play\Global\Obejct</Filter>
-    </ClInclude>
     <ClInclude Include="BackGround.h">
       <Filter>Actor\01. GlobalObject</Filter>
-    </ClInclude>
-    <ClInclude Include="TreeTop.h">
-      <Filter>Actor\03. Play\Global\Obejct</Filter>
-    </ClInclude>
-    <ClInclude Include="SmallStone.h">
-      <Filter>Actor\03. Play\Global\Obejct</Filter>
     </ClInclude>
     <ClInclude Include="FixedPlayerColl.h">
       <Filter>Actor\01. GlobalObject</Filter>
@@ -239,17 +242,62 @@
     <ClInclude Include="InventoryCurrentFrame.h">
       <Filter>Actor\03. Play\Global\Inventory</Filter>
     </ClInclude>
-    <ClInclude Include="SmallWood1.h">
-      <Filter>Actor\03. Play\Global\Obejct</Filter>
-    </ClInclude>
-    <ClInclude Include="SmallWood2.h">
-      <Filter>Actor\03. Play\Global\Obejct</Filter>
-    </ClInclude>
     <ClInclude Include="PlayerHouse.h">
       <Filter>Actor\03. Play\Global\Obejct\buildings</Filter>
     </ClInclude>
+    <ClInclude Include="Hoe.h">
+      <Filter>Actor\03. Play\Global\Obejct\Tool</Filter>
+    </ClInclude>
+    <ClInclude Include="Items.h">
+      <Filter>Actor\03. Play\Global\Obejct\Global</Filter>
+    </ClInclude>
     <ClInclude Include="Block.h">
-      <Filter>Actor\03. Play\Global\Obejct</Filter>
+      <Filter>Actor\03. Play\Global\Obejct\Global</Filter>
+    </ClInclude>
+    <ClInclude Include="SmallStone.h">
+      <Filter>Actor\03. Play\Global\Obejct\Item</Filter>
+    </ClInclude>
+    <ClInclude Include="SmallWood1.h">
+      <Filter>Actor\03. Play\Global\Obejct\Item</Filter>
+    </ClInclude>
+    <ClInclude Include="SmallWood2.h">
+      <Filter>Actor\03. Play\Global\Obejct\Item</Filter>
+    </ClInclude>
+    <ClInclude Include="TreeBottom.h">
+      <Filter>Actor\03. Play\Global\Obejct\Item</Filter>
+    </ClInclude>
+    <ClInclude Include="TreeTop.h">
+      <Filter>Actor\03. Play\Global\Obejct\Item</Filter>
+    </ClInclude>
+    <ClInclude Include="Weeds.h">
+      <Filter>Actor\03. Play\Global\Obejct\Item</Filter>
+    </ClInclude>
+    <ClInclude Include="WildHorseradish.h">
+      <Filter>Actor\03. Play\Global\Obejct\Item</Filter>
+    </ClInclude>
+    <ClInclude Include="Tv.h">
+      <Filter>Actor\03. Play\Global\Obejct\Furniture</Filter>
+    </ClInclude>
+    <ClInclude Include="BadTop.h">
+      <Filter>Actor\03. Play\Global\Obejct\Furniture</Filter>
+    </ClInclude>
+    <ClInclude Include="BadBottom.h">
+      <Filter>Actor\03. Play\Global\Obejct\Furniture</Filter>
+    </ClInclude>
+    <ClInclude Include="Table.h">
+      <Filter>Actor\03. Play\Global\Obejct\Furniture</Filter>
+    </ClInclude>
+    <ClInclude Include="Chair.h">
+      <Filter>Actor\03. Play\Global\Obejct\Furniture</Filter>
+    </ClInclude>
+    <ClInclude Include="MyHouseLevel.h">
+      <Filter>Level</Filter>
+    </ClInclude>
+    <ClInclude Include="Hitter.h">
+      <Filter>Actor\03. Play\Global\Obejct\Furniture</Filter>
+    </ClInclude>
+    <ClInclude Include="MoveFarm.h">
+      <Filter>Actor\03. Play\Global\Obejct\Global</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -303,6 +351,18 @@
     </Filter>
     <Filter Include="Actor\03. Play\Global\Obejct\buildings">
       <UniqueIdentifier>{9d549d44-4815-4517-a918-f31c9cd79189}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Actor\03. Play\Global\Obejct\Furniture">
+      <UniqueIdentifier>{16c55988-52a5-42a8-bc12-f5d8f359cef3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Actor\03. Play\Global\Obejct\Tool">
+      <UniqueIdentifier>{bf2ef558-8502-462c-b3a3-3268d4c6fc31}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Actor\03. Play\Global\Obejct\Global">
+      <UniqueIdentifier>{2fb373cf-46c0-4a11-8b84-fa6589acc391}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Actor\03. Play\Global\Obejct\Item">
+      <UniqueIdentifier>{53c2011e-28b5-42ab-8fdb-a1b3b96b3f61}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
