--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -204,6 +204,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="MapColl.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Mouse.h">
       <SubType>
       </SubType>
@@ -396,6 +400,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="MainUI.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="MapColl.cpp">
       <SubType>
       </SubType>
     </ClCompile>
