--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -216,6 +216,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="MoveHouse.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="MyHouseLevel.h" />
     <ClInclude Include="Player.h">
       <SubType>
@@ -424,6 +428,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="MoveFarm.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="MoveHouse.cpp">
       <SubType>
       </SubType>
     </ClCompile>
