--- a/API/GameEngineContents/GameEngineContents.vcxproj.filters
+++ b/API/GameEngineContents/GameEngineContents.vcxproj.filters
@@ -143,6 +143,9 @@
     <ClCompile Include="MapColl.cpp">
       <Filter>Actor\01. GlobalObject</Filter>
     </ClCompile>
+    <ClCompile Include="MoveHouse.cpp">
+      <Filter>Actor\03. Play\Global\Obejct\Global</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StardewValley.h" />
@@ -304,6 +307,9 @@
     </ClInclude>
     <ClInclude Include="MapColl.h">
       <Filter>Actor\01. GlobalObject</Filter>
+    </ClInclude>
+    <ClInclude Include="MoveHouse.h">
+      <Filter>Actor\03. Play\Global\Obejct\Global</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
