--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -170,6 +170,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="BussStopLevel.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Chair.h">
       <SubType>
       </SubType>
@@ -360,6 +364,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="Block.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="BussStopLevel.cpp">
       <SubType>
       </SubType>
     </ClCompile>
