--- a/API/GameEngine/GameEngine.vcxproj
+++ b/API/GameEngine/GameEngine.vcxproj
@@ -174,6 +174,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="GameEngineFolderImage.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="GameEngineImage.h">
       <SubType>
       </SubType>
@@ -213,6 +217,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="GameEngineCollision.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="GameEngineFolderImage.cpp">
       <SubType>
       </SubType>
     </ClCompile>
