--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -154,6 +154,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Axe.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="BackGround.h">
       <SubType>
       </SubType>
@@ -237,6 +241,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="MyHouseLevel.h" />
+    <ClInclude Include="Pickaxe.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Player.h">
       <SubType>
       </SubType>
@@ -295,8 +303,16 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="PlayLevel.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="RendererData.h" />
     <ClInclude Include="RightArrow.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Scythe.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -352,6 +368,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Watering_Can.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Weeds.h">
       <SubType>
       </SubType>
@@ -363,6 +383,10 @@
     <ClInclude Include="ItemCode.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Axe.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="BackGround.cpp">
       <SubType>
       </SubType>
@@ -473,6 +497,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="MyHouseLevel.cpp" />
+    <ClCompile Include="Pickaxe.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Player.cpp">
       <SubType>
       </SubType>
@@ -501,7 +529,15 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="PlayLevel.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="RightArrow.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Scythe.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -552,6 +588,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="Tv.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Watering_Can.cpp">
       <SubType>
       </SubType>
     </ClCompile>
