플레이어 정리

--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -529,6 +529,8 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="PlayerState.cpp" />
+    <ClCompile Include="PlayerTile.cpp" />
     <ClCompile Include="PlayLevel.cpp">
       <SubType>
       </SubType>
