--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -186,6 +186,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Font.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="GameData.h" />
     <ClInclude Include="Hitter.h">
       <SubType>
@@ -412,6 +416,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="FixedPlayerColl.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Font.cpp">
       <SubType>
       </SubType>
     </ClCompile>
