손에 들 수 있는 아이템이라면 들기

--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -258,6 +258,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="PlayerData.h" />
+    <ClInclude Include="PlayerHandItem.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="PlayerSpriteData.h" />
     <ClInclude Include="IntroLevel.h">
       <SubType>
@@ -538,6 +542,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="MyFarmLevel.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="PlayerHandItem.cpp">
       <SubType>
       </SubType>
     </ClCompile>
