--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -221,6 +221,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="MiniStone.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Mouse.h">
       <SubType>
       </SubType>
@@ -482,6 +486,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="MenuLoad.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="MiniStone.cpp">
       <SubType>
       </SubType>
     </ClCompile>
