--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -225,6 +225,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="MiniWood.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Mouse.h">
       <SubType>
       </SubType>
@@ -490,6 +494,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="MiniStone.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="MiniWood.cpp">
       <SubType>
       </SubType>
     </ClCompile>
