--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -249,6 +249,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="MoveShop.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="MoveTown.h">
       <SubType>
       </SubType>
@@ -338,6 +342,18 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Scythe.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Shop.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="ShopFlag.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="ShopLevel.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -525,6 +541,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="MoveShop.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="MoveTown.cpp">
       <SubType>
       </SubType>
@@ -589,6 +609,18 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="Scythe.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Shop.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="ShopFlag.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="ShopLevel.cpp">
       <SubType>
       </SubType>
     </ClCompile>
