--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -170,6 +170,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="BeanStarter_Shop.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Block.h">
       <SubType>
       </SubType>
@@ -178,11 +182,23 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="CauliflowerSeeds_Shop.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Chair.h">
       <SubType>
       </SubType>
     </ClInclude>
     <ClInclude Include="CropsData.h" />
+    <ClInclude Include="Daffodil_Shop.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Dandelion_Shop.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="FixedPlayerColl.h">
       <SubType>
       </SubType>
@@ -214,6 +230,14 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Items.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="JazzSeeds_Shop.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="KaleSeeds_Shop.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -258,11 +282,23 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="MyHouseLevel.h" />
+    <ClInclude Include="ParsnipSeeds_Shop.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Parsnip_Growing.h">
       <SubType>
       </SubType>
     </ClInclude>
     <ClInclude Include="Parsnip_Seeds.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Parsnip_Shop.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="PatatoSeeds_Shop.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -353,6 +389,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="ShopItem.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="ShopLevel.h">
       <SubType>
       </SubType>
@@ -405,6 +445,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="TulipBulb_Shop.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Tv.h">
       <SubType>
       </SubType>
@@ -440,6 +484,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="BeanStarter_Shop.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Block.cpp">
       <SubType>
       </SubType>
@@ -448,7 +496,19 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="CauliflowerSeeds_Shop.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Chair.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Daffodil_Shop.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Dandelion_Shop.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -486,6 +546,14 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="Items.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="JazzSeeds_Shop.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="KaleSeeds_Shop.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -554,11 +622,23 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="MyHouseLevel.cpp" />
+    <ClCompile Include="ParsnipSeeds_Shop.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Parsnip_Growing.cpp">
       <SubType>
       </SubType>
     </ClCompile>
     <ClCompile Include="Parsnip_Seeds.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Parsnip_Shop.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="PatatoSeeds_Shop.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -620,6 +700,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="ShopItem.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="ShopLevel.cpp">
       <SubType>
       </SubType>
@@ -667,6 +751,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="TreeTop.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="TulipBulb_Shop.cpp">
       <SubType>
       </SubType>
     </ClCompile>
