--- a/API/GameEngineContents/GameEngineContents.vcxproj.filters
+++ b/API/GameEngineContents/GameEngineContents.vcxproj.filters
@@ -209,6 +209,39 @@
     <ClCompile Include="Shop.cpp">
       <Filter>Actor\03. Play\Shop</Filter>
     </ClCompile>
+    <ClCompile Include="ShopItem.cpp">
+      <Filter>Actor\03. Play\Shop</Filter>
+    </ClCompile>
+    <ClCompile Include="ParsnipSeeds_Shop.cpp">
+      <Filter>Actor\03. Play\Shop\ShopItemList</Filter>
+    </ClCompile>
+    <ClCompile Include="BeanStarter_Shop.cpp">
+      <Filter>Actor\03. Play\Shop\ShopItemList</Filter>
+    </ClCompile>
+    <ClCompile Include="CauliflowerSeeds_Shop.cpp">
+      <Filter>Actor\03. Play\Shop\ShopItemList</Filter>
+    </ClCompile>
+    <ClCompile Include="PatatoSeeds_Shop.cpp">
+      <Filter>Actor\03. Play\Shop\ShopItemList</Filter>
+    </ClCompile>
+    <ClCompile Include="TulipBulb_Shop.cpp">
+      <Filter>Actor\03. Play\Shop\ShopItemList</Filter>
+    </ClCompile>
+    <ClCompile Include="KaleSeeds_Shop.cpp">
+      <Filter>Actor\03. Play\Shop\ShopItemList</Filter>
+    </ClCompile>
+    <ClCompile Include="JazzSeeds_Shop.cpp">
+      <Filter>Actor\03. Play\Shop\ShopItemList</Filter>
+    </ClCompile>
+    <ClCompile Include="Parsnip_Shop.cpp">
+      <Filter>Actor\03. Play\Shop\ShopItemList</Filter>
+    </ClCompile>
+    <ClCompile Include="Dandelion_Shop.cpp">
+      <Filter>Actor\03. Play\Shop\ShopItemList</Filter>
+    </ClCompile>
+    <ClCompile Include="Daffodil_Shop.cpp">
+      <Filter>Actor\03. Play\Shop\ShopItemList</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StardewValley.h" />
@@ -437,6 +470,39 @@
     <ClInclude Include="Shop.h">
       <Filter>Actor\03. Play\Shop</Filter>
     </ClInclude>
+    <ClInclude Include="ShopItem.h">
+      <Filter>Actor\03. Play\Shop</Filter>
+    </ClInclude>
+    <ClInclude Include="ParsnipSeeds_Shop.h">
+      <Filter>Actor\03. Play\Shop\ShopItemList</Filter>
+    </ClInclude>
+    <ClInclude Include="BeanStarter_Shop.h">
+      <Filter>Actor\03. Play\Shop\ShopItemList</Filter>
+    </ClInclude>
+    <ClInclude Include="CauliflowerSeeds_Shop.h">
+      <Filter>Actor\03. Play\Shop\ShopItemList</Filter>
+    </ClInclude>
+    <ClInclude Include="PatatoSeeds_Shop.h">
+      <Filter>Actor\03. Play\Shop\ShopItemList</Filter>
+    </ClInclude>
+    <ClInclude Include="TulipBulb_Shop.h">
+      <Filter>Actor\03. Play\Shop\ShopItemList</Filter>
+    </ClInclude>
+    <ClInclude Include="KaleSeeds_Shop.h">
+      <Filter>Actor\03. Play\Shop\ShopItemList</Filter>
+    </ClInclude>
+    <ClInclude Include="JazzSeeds_Shop.h">
+      <Filter>Actor\03. Play\Shop\ShopItemList</Filter>
+    </ClInclude>
+    <ClInclude Include="Parsnip_Shop.h">
+      <Filter>Actor\03. Play\Shop\ShopItemList</Filter>
+    </ClInclude>
+    <ClInclude Include="Dandelion_Shop.h">
+      <Filter>Actor\03. Play\Shop\ShopItemList</Filter>
+    </ClInclude>
+    <ClInclude Include="Daffodil_Shop.h">
+      <Filter>Actor\03. Play\Shop\ShopItemList</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Actor">
@@ -513,6 +579,9 @@
     </Filter>
     <Filter Include="Actor\03. Play\Shop">
       <UniqueIdentifier>{a5fd3d76-7287-4952-b7d1-9214d98bf275}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Actor\03. Play\Shop\ShopItemList">
+      <UniqueIdentifier>{febc0259-bb78-415e-987e-c751b3b9de17}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
